@@ -1771,7 +1771,7 @@ class Reception extends CommonObject
      *	@param	User	$user			Object user that modify
      *	@return	int						<0 if KO, >0 if OK
      */
-    public function set_draft($user)
+    public function setDraft($user)
     {
 		// phpcs:enable
         global $conf,$langs;
