@@ -491,7 +491,7 @@ if (empty($reshook))
 	// Go back to draft
 	if ($action == 'modif' && $user->rights->supplier_proposal->creer)
 	{
-		$object->set_draft($user);
+		$object->setDraft($user);
 
 		if (empty($conf->global->MAIN_DISABLE_PDF_AUTOUPDATE))
 		{
